<resources>
    <string name="app_name" translatable="false">Papeleria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txt_ingrese">Registre sus datos</string>
    <string name="input_usuario">Ingrese su nombre de usuario</string>
    <string name="input_contrasena">Ingrese su contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar sesión</string>
    <string name="txt_ingresarDatos">Ingrese Datos</string>
    <string name="input_Producto">Nombre del producto</string>
    <string name="input_Unidades">Unidades Iniciales</string>
    <string name="input_Valor">Valor unitario</string>
    <string name="btn_registrardatos">Registrar Datos</string>
    <string name="txt_registrardatos" translatable="false" />
    <string name="input_codigoretirar">Ingrese código del artículo</string>
    <string name="input_unidadesretirar">Unidades a retirar</string>
    <string name="btn_retirararticulo">Retirar artículo</string>
    <string name="btn_Entrada">Registrar Artículo</string>
    <string name="btn_Salida">Retirar Articulo</string>
    <string name="btn_Inventario">Ver inventario</string>
    <string name="txt_ingresaono" translatable="false" />
    <string name="sw_Mostrar">Mostrar Contraseña</string>
    <string name="txt_uretirar">Unidades a retirar</string>
    <string name="home" translatable="false">Home</string>
    <string name="Home" translatable="false">Home</string>
    <string name="txt_codigoInv">Código</string>
    <string name="txt_productoInv">Producto</string>
    <string name="txt_stockInv" translatable="false">Stock</string>
    <string name="txt_salidasInv">Salidas</string>
    <string name="txt_valorInv">Valor Unitario</string>
    <string name="cb_porcodigo">Por Código</string>
    <string name="cb_pornombre">Por nombre</string>
    <string name="input_nomar">Ingrese nombre del articulo</string>
    <string name="txt_formaderetirar">Seleccione el método de busqueda del articulo que desea retirar</string>
    <string name="cb_escritura">Escritura</string>
    <string name="cb_oficina">Oficina</string>
    <string name="cb_otros">Otros</string>
    <string name="btn_registrar">Registrar</string>
    <string name="txt_UserID" translatable="false">XXXXX</string>
    <string name="txt_UserName" translatable="false">XXXX</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="input_codigo">"Ingrese código "</string>
    <string name="input_idusuario">Id Usuario</string>
    <string name="txt_password" translatable="false">0000</string>
    <string name="btn_usuarios">"Ver Usuarios "</string>
</resources>