<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txt_ingrese"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/txt_ingrese"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:autofillHints=""
        android:contextClickable="false"
        android:ems="10"
        android:hint="@string/input_usuario"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/input_contrasena"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_contrasena"
        android:inputType="number|numberPassword"
        tools:ignore="VisualLintTextFieldSize" />

    <Switch
        android:id="@+id/sw_Mostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/sw_Mostrar"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:text="@string/boton_iniciar_sesion" />

</LinearLayout>