<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntradaDatosFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/txt_ingresarDatos"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:layout_below="@+id/toolbar2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="137dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="128dp"
        android:text="@string/txt_ingresarDatos"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/input_Producto"
        android:layout_width="394dp"
        android:layout_height="81dp"
        android:layout_below="@+id/txt_ingresarDatos"
        android:layout_alignStart="@+id/txt_ingresarDatos"
        android:layout_alignEnd="@+id/txt_ingresarDatos"
        android:layout_marginStart="-138dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="-128dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_Producto"
        android:inputType="text"
        tools:ignore="LabelFor,VisualLintTextFieldSize,TextSizeCheck" />

    <EditText
        android:id="@+id/input_Stock"
        android:layout_width="393dp"
        android:layout_height="78dp"
        android:layout_below="@+id/input_Producto"
        android:layout_alignStart="@+id/input_Producto"
        android:layout_alignEnd="@+id/input_Producto"
        android:layout_marginStart="4dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="-5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_Unidades"
        android:inputType="number"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/input_Valor"
        android:layout_width="393dp"
        android:layout_height="71dp"
        android:layout_below="@+id/input_Stock"
        android:layout_alignStart="@+id/input_Stock"
        android:layout_alignEnd="@+id/input_Stock"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="2dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_Valor"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_registrardatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_otros"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="20dp"
        android:onClick="registrar"
        android:text="@string/btn_registrardatos" />

    <ImageButton
        android:id="@+id/imagebtn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_registrardatos"
        android:layout_marginEnd="98dp"
        android:contentDescription="@string/Home"
        android:src="@drawable/casa"
        tools:ignore="UnknownId" />

    <CheckBox
        android:id="@+id/cb_otros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_Valor"
        android:layout_marginStart="38dp"
        android:layout_marginTop="74dp"
        android:layout_toEndOf="@+id/cb_oficina"
        android:text="@string/cb_otros" />

    <CheckBox
        android:id="@+id/cb_escritura"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_Valor"
        android:layout_alignStart="@+id/input_Valor"
        android:layout_marginStart="9dp"
        android:layout_marginTop="76dp"
        android:text="@string/cb_escritura" />

    <CheckBox
        android:id="@+id/cb_oficina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_Valor"
        android:layout_marginStart="26dp"
        android:layout_marginTop="74dp"
        android:layout_toEndOf="@+id/cb_escritura"
        android:text="@string/cb_oficina" />

    <TextView
        android:id="@+id/txt_tiposeleccionado"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_escritura"
        android:layout_alignStart="@+id/cb_escritura"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_Valor"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="31dp"
        android:text="Seleccione su tipo" />

    <EditText
        android:id="@+id/input_codigo"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_below="@+id/txt_ingresarDatos"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/input_codigo"
        android:inputType="number" />

</RelativeLayout>