<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F8EBEB"
    tools:context=".SalidaDatosFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_ingrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ingresarDatos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <EditText
        android:id="@+id/input_codigoretirar"
        android:layout_width="391dp"
        android:layout_height="79dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/input_codigoretirar"
        android:textColor="#ADB1B3"
        android:textColorHint="#EFEEEE"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        tools:ignore="LabelFor,TextSizeCheck" />

    <EditText
        android:id="@+id/input_nomar"
        android:layout_width="398dp"
        android:layout_height="78dp"
        android:layout_marginBottom="476dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/input_nomar"
        android:textColor="#ACB0B2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_retirararticulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_retirararticulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <ImageButton
        android:id="@+id/imagebtn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Home"
        android:src="@drawable/casa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="168dp"
        android:checkedButton="@id/cb_porcodígo"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar3">

        <RadioButton
            android:id="@+id/cb_porcodígo"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/cb_porcodigo"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/cb_pornombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_pornombre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_formaderetirar"
        android:layout_width="361dp"
        android:layout_height="51dp"
        android:text="@string/txt_formaderetirar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/input_unidadesretirar"
        android:layout_width="394dp"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/input_unidadesretirar"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712" />


</androidx.constraintlayout.widget.ConstraintLayout>