<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesFragment" >

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_Inventario"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/inventario"
            android:text="@string/btn_Inventario"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_Entrada"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:drawableLeft="@drawable/entrada"
            android:text="@string/btn_Entrada"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_Salida"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:drawableLeft="@drawable/salida"
            android:text="@string/btn_Salida"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="673dp"
            android:src="@drawable/imagenopciones"
            app:layout_column="0"
            app:layout_row="0" />


    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>